--- a/check_env.ipynb
+++ b/check_env.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "print()\n",
     "requirements = {'numpy': \"1.6.1\", 'scipy': \"0.9\", 'matplotlib': \"1.0\",\n",
-    "                'IPython': \"3.0\", 'sklearn': \"0.18\", 'pandas': \"0.18\",\n",
+    "                'IPython': \"3.0\", 'sklearn': \"0.20.1\", 'pandas': \"0.18\",\n",
     "                'PIL': \"1.1.7\"}\n",
     "\n",
     "# now the dependencies\n",
@@ -76,7 +76,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -90,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
