--- a/notebooks/01 - Introduction to Scikit-learn.ipynb
+++ b/notebooks/01 - Introduction to Scikit-learn.ipynb
@@ -216,9 +216,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:py37]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
