--- a/notebooks/03 - Cross-validation and Grid Search.ipynb
+++ b/notebooks/03 - Cross-validation and Grid Search.ipynb
@@ -244,9 +244,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:py37]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
