--- a/notebooks/05 - Linear Models for Regression.ipynb
+++ b/notebooks/05 - Linear Models for Regression.ipynb
@@ -311,9 +311,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [conda env:py37]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
