--- a/notebooks/06 - Linear Models for Classification.ipynb
+++ b/notebooks/06 - Linear Models for Classification.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [conda env:py37]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -47,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
