--- a/notebooks/07 - Trees.ipynb
+++ b/notebooks/07 - Trees.ipynb
@@ -16,12 +16,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "% matplotlib inline\n",
-    "plt.rcParams[\"figure.dpi\"] = 300\n",
-    "np.set_printoptions(precision=3)\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import scale, StandardScaler"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -246,21 +242,14 @@
     "\n",
     "Visualize the resulting tree and it's feature importances."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [conda env:py37]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
