--- a/notebooks/08 - Random Forests.ipynb
+++ b/notebooks/08 - Random Forests.ipynb
@@ -16,12 +16,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "% matplotlib inline\n",
-    "plt.rcParams[\"figure.dpi\"] = 200\n",
-    "np.set_printoptions(precision=3)\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import scale, StandardScaler"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -40,6 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    cancer.data, cancer.target, stratify=cancer.target, random_state=1)\n",
     "rf = RandomForestClassifier(n_estimators=100).fit(X_train, y_train)"
@@ -78,9 +75,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [conda env:py37]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -92,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
