--- a/check_env.ipynb
+++ b/check_env.ipynb
@@ -56,7 +56,7 @@
     "    print(FAIL, \"Unknown Python version: %s\" % sys.version)\n",
     "\n",
     "print()\n",
-    "requirements = {'numpy': \"1.6.1\", 'scipy': \"0.9\", 'matplotlib': \"1.0\",\n",
+    "requirements = {'numpy': \"1.6.1\", 'scipy': \"0.9\", 'matplotlib': \"2.0\",\n",
     "                'IPython': \"3.0\", 'sklearn': \"0.20.1\", 'pandas': \"0.18\",\n",
     "                'PIL': \"1.1.7\"}\n",
     "\n",
@@ -76,7 +76,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -90,9 +90,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
