--- a/notebooks/04 - Preprocessing.ipynb
+++ b/notebooks/04 - Preprocessing.ipynb
@@ -10,23 +10,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "% matplotlib inline\n",
-    "plt.rcParams[\"figure.dpi\"] = 200"
+    "% matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
@@ -40,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(boston.DESCR)"
@@ -51,9 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(3, 5, figsize=(20, 10))\n",
@@ -69,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.boxplot(X)\n",
@@ -82,9 +71,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "StandardScaler?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -95,39 +91,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "scores = cross_val_score(KNeighborsRegressor(),\n",
-    "                         X_train, y_train, cv=10)\n",
-    "np.mean(scores), np.std(scores)"
+    "knr = KNeighborsRegressor().fit(X_train, y_train)\n",
+    "knr.score(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "scores = cross_val_score(KNeighborsRegressor(),\n",
-    "                         X_train_scaled, y_train, cv=10)\n",
-    "np.mean(scores), np.std(scores)"
+    "knr.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knr_scaled = KNeighborsRegressor().fit(X_train_scaled, y_train)\n",
+    "knr_scaled.fit(X_train_scaled, y_train)\n",
+    "knr_scaled.score(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "knr_scaled.score(X_test_scaled, y_test)"
    ]
   },
   {
@@ -137,9 +143,9 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "scores = cross_val_score(RandomForestRegressor(n_estimators=100, random_state=0),\n",
-    "                         X_train_scaled, y_train, cv=10)\n",
-    "np.mean(scores), np.std(scores)"
+    "rf = RandomForestRegressor(n_estimators=100, random_state=0)\n",
+    "rf.fit(X_train, y_train)\n",
+    "rf.score(X_test, y_test)"
    ]
   },
   {
@@ -148,10 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "scores = cross_val_score(RandomForestRegressor(n_estimators=100, random_state=0),\n",
-    "                         X_train, y_train, cv=10)\n",
-    "np.mean(scores), np.std(scores)"
+    "rf_scaled = RandomForestRegressor(n_estimators=100, random_state=0)\n",
+    "rf_scaled.fit(X_train_scaled, y_train)\n",
+    "rf_scaled.score(X_test_scaled, y_test)"
    ]
   },
   {
@@ -188,68 +193,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame({'salary': [103, 89, 142, 54, 63, 219],\n",
-    "                   'boro': [0, 1, 0, 2, 2, 3]})\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.get_dummies(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.get_dummies(df, columns=['boro'])"
+    "from sklearn.compose import make_column_transformer, ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "categorical = df.dtypes == object\n",
+    "ct = make_column_transformer((categorical, OneHotEncoder()),\n",
+    "                             (~categorical, StandardScaler()))\n",
+    "ct.fit_transform(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ensuring consistent encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame({'salary': [103, 89, 142, 54, 63, 219],\n",
-    "                   'boro': ['Manhatten', 'Queens', 'Manhatten', 'Brooklyn', 'Brooklyn', 'Bronx']})\n",
+    "# Exercises\n",
     "\n",
+    "## Exercise 1\n",
+    "Load the \"adult\" datasets consisting of income data from the census, classifying adults into those earning above ``$50k`` a year vs those earning below.\n",
     "\n",
-    "df['boro'] = pd.Categorical(df['boro'],\n",
-    "                            categories=['Manhatten', 'Queens', 'Brooklyn', 'Bronx', 'Staten Island'])\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.get_dummies(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise\n",
-    "Apply dummy encoding and scaling to the \"adult\" dataset consisting of income data from the census.\n",
+    "## Exercise 2\n",
+    "Experiment with visualizing the data. Can you find out which features influence the income the most?\n",
     "\n",
-    "Bonus: visualize the data."
+    "## Exercise 3\n",
+    "Separate the target variable from the features.\n",
+    "Split the data into training and test set.\n",
+    "Apply dummy encoding and scaling.\n",
+    "How did this change the number of variables?\n",
+    "\n",
+    "## Exercise 4\n",
+    "Build and evaluate a LogisticRegression model on the data.\n",
+    "\n"
    ]
   },
   {
@@ -278,9 +250,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py37]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "conda-env-py37-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -292,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
